tests/suite/snapshots/suite__parse__tests__parse__assign04-2.xi.snap
---
source: tests/suite/parse.rs
assertion_line: 36
expression: Snapshot(program)
---
Error: Syntactic error
   ╭─[tests/parse/assign04-2.xi:2:12]
   │
 2 │   a:int, y = f(x);
   ·            ┬  
   ·            ╰── Unexpected token
───╯

